crates/kirin-derive-core/src/generators/builder/snapshots/kirin_derive_core__generators__builder__tests__multi_results_struct.snap
---
source: crates/kirin-derive-core/src/generators/builder/tests.rs
expression: "case!\n{\n    #[kirin(fn, type = L)] struct MultiResult<T: CompileTimeValue + Typeof<L>,\n    L: TypeLattice>\n    {\n        #[kirin(into)] value: T, #[kirin(type = value.type_of())] result1:\n        ResultValue, #[kirin(type = value.type_of())] result2: ResultValue,\n        #[kirin(default = std::marker::PhantomData)] marker:\n        std::marker::PhantomData<L>,\n    }\n}"
---
#[automatically_derived]
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> MultiResult<T, L> {
    pub fn new<Lang>(
        stage: &mut ::kirin::ir::StageInfo<Lang>,
        value: impl Into<T>,
    ) -> multi_result_build_result::MultiResult
    where
        Lang: ::kirin::ir::Dialect + From<MultiResult<T, L>>,
        Lang::Type: From<L>,
    {
        let multiresult_statement_id = stage.statement_arena().next_id();
        let value: T = value.into();
        let marker: std::marker::PhantomData<L> = std::marker::PhantomData;
        let result1: ResultValue = stage
            .ssa()
            .kind(SSAKind::Result(multiresult_statement_id, 0usize))
            .ty(Lang::Type::from(value.type_of()))
            .new()
            .into();
        let result2: ResultValue = stage
            .ssa()
            .kind(SSAKind::Result(multiresult_statement_id, 1usize))
            .ty(Lang::Type::from(value.type_of()))
            .new()
            .into();
        stage
            .statement()
            .definition(Self {
                value: value,
                result1: result1,
                result2: result2,
                marker: marker,
            })
            .new();
        multi_result_build_result::MultiResult {
            id: multiresult_statement_id,
            result1,
            result2,
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub mod multi_result_build_result {
    use kirin::ir::{ResultValue, Statement};
    #[automatically_derived]
    #[doc(hidden)]
    pub struct MultiResult {
        pub id: Statement,
        pub result1: ResultValue,
        pub result2: ResultValue,
    }
    #[automatically_derived]
    impl From<MultiResult> for Statement {
        fn from(value: MultiResult) -> Self {
            value.id
        }
    }
}
