crates/kirin-derive-core/src/generators/builder/snapshots/kirin_derive_core__generators__builder__tests__regular_named_struct.snap
---
source: crates/kirin-derive-core/src/generators/builder/tests.rs
expression: "case!\n{\n    #[kirin(constant, fn = new, type = L)] pub struct Constant<T:\n    CompileTimeValue + Typeof<L>, L: TypeLattice>\n    {\n        #[kirin(into)] pub value: T, #[kirin(type = value.type_of())] pub\n        result: ResultValue, #[kirin(default = std::marker::PhantomData)] pub\n        marker: std::marker::PhantomData<L>,\n    }\n}"
---
#[automatically_derived]
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> Constant<T, L> {
    pub fn new<Lang>(
        stage: &mut ::kirin::ir::StageInfo<Lang>,
        value: impl Into<T>,
    ) -> constant_build_result::Constant
    where
        Lang: ::kirin::ir::Dialect + From<Constant<T, L>>,
        Lang::Type: From<L>,
    {
        let constant_statement_id = stage.statement_arena().next_id();
        let value: T = value.into();
        let marker: std::marker::PhantomData<L> = std::marker::PhantomData;
        let result: ResultValue = stage
            .ssa()
            .kind(SSAKind::Result(constant_statement_id, 0usize))
            .ty(Lang::Type::from(value.type_of()))
            .new()
            .into();
        stage
            .statement()
            .definition(Self {
                value: value,
                result: result,
                marker: marker,
            })
            .new();
        constant_build_result::Constant {
            id: constant_statement_id,
            result,
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub mod constant_build_result {
    use kirin::ir::{ResultValue, Statement};
    #[automatically_derived]
    #[doc(hidden)]
    pub struct Constant {
        pub id: Statement,
        pub result: ResultValue,
    }
    #[automatically_derived]
    impl From<Constant> for Statement {
        fn from(value: Constant) -> Self {
            value.id
        }
    }
}
