crates/kirin-derive-core/src/generators/builder/snapshots/kirin_derive_core__generators__builder__tests__wrapper_enum.snap
---
source: crates/kirin-derive-core/src/generators/builder/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type = SomeType)] enum WrapperEnum\n    { A(InnerA), B(InnerB), }\n}"
---
#[automatically_derived]
impl From<InnerA> for WrapperEnum {
    fn from(value: InnerA) -> Self {
        Self::A(value)
    }
}
#[automatically_derived]
impl From<InnerB> for WrapperEnum {
    fn from(value: InnerB) -> Self {
        Self::B(value)
    }
}
